--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libcolumnfile (1.1.0-1) unstable; urgency=medium
+
+  * Switch to C++17.
+
+ -- Morten Hustveit <morten.hustveit@gmail.com>  Sun, 10 Sep 2017 18:53:02 -0400
+
 libcolumnfile (1.0.1-1) unstable; urgency=medium
 
   * Fixed some packaging issues.
