--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libcolumnfile (1.1.2) unstable; urgency=medium
+
+  * Various bugfixes.
+
+ -- Morten Hustveit <morten.hustveit@gmail.com>  Sat, 16 Sep 2017 00:29:12 -0400
+
 libcolumnfile (1.1.1-1) unstable; urgency=medium
 
   * Support move constructor and assignment.
