--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libcolumnfile (1.2.1-0) unstable; urgency=medium
+
+  * Add columnfile-cat and columnfile-sort.
+
+ -- Morten Hustveit <morten.hustveit@gmail.com>  Mon, 29 Jan 2018 04:08:09 +0100
+
 libcolumnfile (1.2.0) unstable; urgency=medium
 
   * Remove dependency on KJ headers in programs linking to this library.
